# neural-network-mnist

./: .gitignore  CMakeLists.txt  Notes_todo.txt  README.md  RUN  parse_mnist.py
include/: activation_fns.hpp  error_fns.hpp  input_loading.hpp  labels.hpp  layer.hpp  lingebra.hpp  neural_network.hpp  old_network.hpp
paralell/: main_paralell.cpp  neural_network_paralyzed.hpp
parallel/: main_parallel.cpp  neural_network_parallel.cpp
python_evaluator/: README.md
src/: main.cpp
